<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0D2FBF"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_text"
            style="@style/MainTextStyle"
            android:layout_width="175dp"
            android:layout_height="62dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/title_text"
            android:textColor="#C5D528"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_out_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/out_of_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="362dp"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#0F2687"
            android:elevation="12dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_out_of">

            <TextView
                android:id="@+id/question_textview"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/question_text_padding"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_true"
            style="@style/button_style"
            android:layout_width="385dp"
            android:backgroundTint="#0F2687"
            android:text="@string/true_button"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <Button
            android:id="@+id/button_false"
            style="@style/button_style"
            android:layout_width="385dp"
            android:layout_height="57dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#0F2687"
            android:text="@string/false_button"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_true" />

        <Button
            android:id="@+id/button_next"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#0F2687"
            android:text="@string/next_button"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false" />

        <TextView
            android:id="@+id/score_text"
            style="@style/score_style"
            android:layout_width="130dp"
            android:layout_height="24dp"
            android:layout_marginTop="48dp"
            android:text="@string/score_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.861"
            app:layout_constraintStart_toEndOf="@+id/text_view_out_of"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <TextView
            android:id="@+id/highest_scoreText"
            style="@style/score_style"
            android:layout_width="130dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/highest_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.967"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>